--- a/app/views/application/_navigation.html.haml
+++ b/app/views/application/_navigation.html.haml
@@ -11,6 +11,6 @@
           %li= link_to "Invoices", :invoices
           %li= link_to "Delegations", :delegations
           %li= link_to "Clients", :clients
-          %li= link_to "Days", :days
+          %li= link_to "Days off", :days
           %li= link_to "Exchange rates", :exchange_rates
           %li= link_to "Banks", :banks
