--- a/app/views/days/index.html.haml
+++ b/app/views/days/index.html.haml
@@ -1,10 +1,10 @@
 .page-header
-  %h1 Days
+  %h1 Days off
 %table.table.table-striped
   %thead
     %tr
       %th Date
-      %th Actions
+      %th.min Actions
   %tbody
     - @days.each do |day|
       %tr
