--- a/app/views/delegations/show.pdf.haml
+++ b/app/views/delegations/show.pdf.haml
@@ -66,7 +66,7 @@
         %tr
           %td{:style => 'text-align: left;'} Dieta
           %td= @delegation.diet_number
-          %td= number_to_currency CONFIG['diets']['de'], :unit => '€', :format => "%u%n"
+          %td= number_to_currency @delegation.diet, :unit => '€', :format => "%u%n"
           %td= number_to_currency @delegation.diet_total, :unit => '€', :format => "%u%n"
         - @delegation.delegation_costs.each do |cost|
           %tr
