--- a/app/views/invoices/index.html.haml
+++ b/app/views/invoices/index.html.haml
@@ -14,6 +14,7 @@
       %th Total gross
       %th Total gross in PLN
       %th Created on
+      %th Paid on
       %th Actions
   %tbody
     = render @invoices
